--- a/library.properties
+++ b/library.properties
@@ -9,4 +9,4 @@ url=https://github.com/avdosev/async-library-arduino
 architectures=*
 repository=https://github.com/avdosev/async-library-arduino.git
 license=MIT
-include=include
+include=./include
